--- a/PlatformCommons/src/main/resources/server-config.json
+++ b/PlatformCommons/src/main/resources/server-config.json
@@ -106,7 +106,7 @@
 
 	"agentDetails": 
 	{
-		"isOnlineRegistration": false,
+		"isOnlineRegistration": true,
 		"docrootUrl": "http://platform.cogdevops.com//insights_install//release//",
 		"offlineAgentPath": "D:\\Project\\Insights\\InSights_Windows\\Agents\\offlineAgent",
 		"unzipPath": "D:\\Project\\Insights\\InSights_Windows\\Agents\\PlatformAgents\\zip",
