--- a/PlatformUI2.0/app/src/tsconfig.json
+++ b/PlatformUI2.0/app/src/tsconfig.json
@@ -2,6 +2,10 @@
   "compilerOptions": {
     "target": "es5",
     "sourceMap": true,
-    "outDir": "../dist/"
+    "outDir": "app/dist/",
+	"types": [
+        "angular"
+    ]
   }
+  
 }
