--- a/PlatformUI2.0/app/src/tsconfig.json
+++ b/PlatformUI2.0/app/src/tsconfig.json
@@ -2,10 +2,7 @@
   "compilerOptions": {
     "target": "es5",
     "sourceMap": true,
-    "outDir": "app/dist/",
-	"types": [
-        "angular"
-    ]
+    "outDir": "app/dist/"
   }
   
 }
