165853996 :- Bug for sonar agent starting fail.

--- a/PlatformAgents/com/cognizant/devops/platformagents/agents/codequality/sonar/config.json
+++ b/PlatformAgents/com/cognizant/devops/platformagents/agents/codequality/sonar/config.json
@@ -1,6 +1,9 @@
 {
- 
- 
+  "communication": {
+    "type": "REST",
+    "sslVerify": true,
+    "responseType": "JSON"
+  },
   "mqConfig": {
     "exchange": "iSight",
     "host": "127.0.0.1",
