--- a/PlatformService/pom.xml
+++ b/PlatformService/pom.xml
@@ -168,11 +168,11 @@
 			<version>${spring.security.version}</version>
 		</dependency>
 
-		<dependency>
+		<!-- <dependency>
 			<groupId>org.springframework.ldap</groupId>
 			<artifactId>spring-ldap-core</artifactId>
 			<version>2.1.0.RELEASE</version>
-		</dependency>
+		</dependency> -->
 		<!-- added for junit testing -->
 		<dependency>
 			<groupId>junit</groupId>
@@ -276,8 +276,8 @@
 	<properties>
 		<jersey.version>2.23</jersey.version>
 		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
-		<spring.version>4.3.19.RELEASE</spring.version>
-        <spring.security.version>4.2.9.RELEASE</spring.security.version>
+		<spring.version>5.1.5.RELEASE</spring.version>
+        <spring.security.version>5.1.5.RELEASE</spring.security.version>
 		<mockito.version>1.10.19</mockito.version>
 		<junit.version>4.12</junit.version>
 	</properties>
