--- a/PlatformUI3/angular.json
+++ b/PlatformUI3/angular.json
@@ -26,7 +26,9 @@
               "src/styles.css",
               "src/assets/mfonts/material-icons/material-icons.css"
             ],
-            "scripts": []
+            "scripts": [
+              "node_modules/crypto-js/crypto-js.js"
+            ]
           },
           "configurations": {
             "production": {
