--- a/pom.xml
+++ b/pom.xml
@@ -96,7 +96,7 @@
 		<url>http://localhost:9005/nexus/content/repositories/InSightsArtifacts/</url> 
 		</snapshotRepository> </distributionManagement> -->
 
-       <distributionManagement>
+     <!--  <distributionManagement>
 		<repository> 
 		<id>nexus</id>		
 			<url>http://insightsplatformnexusrepo.cogdevops.com:8001/nexus/content/repositories/InsightsRelease</url> 
@@ -105,7 +105,21 @@
 			<id>nexus</id>
 			<url>http://insightsplatformnexusrepo.cogdevops.com:8001/nexus/content/repositories/buildonInsights</url>
 		</snapshotRepository>
+	</distributionManagement> -->
+	
+	<distributionManagement>
+		<repository> 
+						<id>nexus</id>                
+						<url>https://repo.cogdevops.com/repository/InsightsRelease</url> 
+		</repository>
+		<snapshotRepository>
+						<id>nexus</id>
+						<url>https://repo.cogdevops.com/repository/buildonInsights</url>
+		</snapshotRepository>
 	</distributionManagement>
+
+
+
 	
 	<profiles>
 		<profile>
