--- a/PlatformUI2.0/app/src/tsconfig.json
+++ b/PlatformUI2.0/app/src/tsconfig.json
@@ -2,7 +2,6 @@
   "compilerOptions": {
     "target": "es5",
     "sourceMap": true,
-    "outDir": "app/dist/"
+    "outDir": "../dist/"
   }
-  
 }
